# Agesthetic

./: .env.example  .gitignore  README.md  pyproject.toml
data/: luma_attendees_mock.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/contracts/: IntroBounty.json
src/: api.py  config.py
src/agents/: copywriter.py  matchmaker.py  researcher.py
src/automation/: twitter_dm.py
src/data/: loader.py  models.py
src/tasks/: draft_task.py  match_task.py  research_task.py
tests/: test_copywriter.py  test_loader.py  test_matchmaker.py
web3/: hardhat.config.ts  package-lock.json  package.json
web3/artifacts/contracts/IntroBounty.sol/: IntroBounty.dbg.json
web3/cache/: solidity-files-cache.json
web3/contracts/: IntroBounty.sol
web3/scripts/: deploy.ts
web3/typechain-types/: IntroBounty.ts  hardhat.d.ts  index.ts
web3/typechain-types/factories/: IntroBounty__factory.ts  index.ts
